fix image wrapping

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss.less
@@ -1,6 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
+
  body { padding-top: 50px; }
 
 // Set the correct sprite paths
@@ -47,6 +48,15 @@ body {
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
 }
 
+p img.image-align-left { 
+    float: left; 
+    margin: 20px; 
+}
+
+p img.image-align-right { 
+    float: left; 
+    margin: 20px; 
+}
 
 
 .content {
@@ -105,4 +115,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     vertical-align: middle;
 }
 
-
+p img .image-align-left{
+		align:left;
+} 
